add navbar in login.html

--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "root",
-    "password": "ecZ4khM4G26T3eAz1h0q",
+    "password": "Mishi*20",
     "database": "leftoverWizard_db",
     "host": "127.0.0.1",
     "dialect": "mysql"
